[gd_scene load_steps=16 format=3 uid="uid://drsmg1quf85hn"]

[ext_resource type="Script" path="res://scenes/location_add.gd" id="1_0uqn7"]
[ext_resource type="Shader" path="res://scenes/dog_profile2.gdshader" id="1_vj1je"]
[ext_resource type="Texture2D" uid="uid://bm1lsbm6hwvqn" path="res://white.png" id="2_v2e8w"]
[ext_resource type="FontFile" uid="uid://cgxi82mnvgbsg" path="res://fonts/Roboto/Roboto-Black.ttf" id="4_xf3p3"]
[ext_resource type="Texture2D" uid="uid://1ne2bnpqeonq" path="res://lower_border.png" id="5_gb4ry"]
[ext_resource type="StyleBox" uid="uid://dxvcadrfhjl1d" path="res://scenes/asavNew_panel.tres" id="6_7x0py"]
[ext_resource type="StyleBox" uid="uid://dbig5rwjuc5do" path="res://scenes/dog_profile.tres" id="7_nligs"]
[ext_resource type="Texture2D" uid="uid://bgd5bn0hkyo54" path="res://xUI_button.png" id="8_afhr1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nila3"]
shader = ExtResource("1_vj1je")
shader_parameter/radius = 1.0
shader_parameter/animate = false
shader_parameter/square_scale = 0.1

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0dse1"]
texture = ExtResource("5_gb4ry")
modulate_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_reabl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ou4t3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hg621"]
bg_color = Color(1, 0.768627, 0.286275, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pwwe2"]
bg_color = Color(1, 0.768627, 0.286275, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_80dy2"]
texture = ExtResource("8_afhr1")
modulate_color = Color(0.407843, 0.309804, 0, 1)

[node name="location_add" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0uqn7")

[node name="backgroundPane" type="TextureRect" parent="."]
process_mode = 3
material = SubResource("ShaderMaterial_nila3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 203.0
offset_top = 120.0
offset_right = -270.0
offset_bottom = -143.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_v2e8w")
expand_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="backgroundPane"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="backgroundPane/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="backgroundPane/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_xf3p3")
theme_override_font_sizes/font_size = 40
text = "Location:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="locationEdit" type="LineEdit" parent="backgroundPane/CenterContainer/VBoxContainer"]
process_mode = 3
custom_minimum_size = Vector2(311, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_0dse1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_reabl")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_ou4t3")

[node name="save_button" type="Button" parent="."]
process_mode = 3
offset_left = 496.0
offset_top = 452.0
offset_right = 623.0
offset_bottom = 471.0
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_xf3p3")
theme_override_styles/normal = ExtResource("6_7x0py")
theme_override_styles/hover = SubResource("StyleBoxFlat_hg621")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pwwe2")
theme_override_styles/disabled = ExtResource("6_7x0py")
theme_override_styles/focus = ExtResource("6_7x0py")
text = "Add Location"

[node name="exit_button" type="Button" parent="."]
offset_left = 791.0
offset_top = 144.0
offset_right = 847.0
offset_bottom = 195.0
theme_override_styles/normal = ExtResource("7_nligs")
theme_override_styles/hover = SubResource("StyleBoxTexture_80dy2")
theme_override_styles/pressed = ExtResource("7_nligs")
theme_override_styles/disabled = ExtResource("7_nligs")
theme_override_styles/focus = ExtResource("7_nligs")

[connection signal="pressed" from="save_button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
